Create the hosted service

--- a/Acme.Demo.MicroServices.DrawingMentor/Acme.Demo.MicroServices.DrawingMentor.csproj
+++ b/Acme.Demo.MicroServices.DrawingMentor/Acme.Demo.MicroServices.DrawingMentor.csproj
@@ -5,4 +5,8 @@
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Content Remove="stylecop.json" />
+    </ItemGroup>
+
 </Project>
