--- a/Acme.Demo.MicroServices.DrawingMentor/appsettings.json
+++ b/Acme.Demo.MicroServices.DrawingMentor/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ServiceBusConnectionStrings" : {
+    "Mentor" : "Endpoint=sb://acme-demo.servicebus.windows.net/;SharedAccessKeyName=Mentor;SharedAccessKey=cOnPJ3V9uZRcy6QRZbxrvkw+nUERAN+j70TBBx7obQ8=;EntityPath=mentor"
+  }
 }
