--- a/.gitignore
+++ b/.gitignore
@@ -365,4 +365,5 @@ ASALocalRun/
 **/.tscache/
 
 # specific
-/Prism.PicShare.Backend/appsettings.Development.json
+**/appsettings.Development.json
+**/appsettings.Production.json
