--- a/Acme.Demo.MicroServices.Drawer/Acme.Demo.MicroServices.Drawer.csproj
+++ b/Acme.Demo.MicroServices.Drawer/Acme.Demo.MicroServices.Drawer.csproj
@@ -5,4 +5,13 @@
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.1.2" />
+      <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Acme.Demo.MicroService\Acme.Demo.MicroService.csproj" />
+    </ItemGroup>
+
 </Project>
