Add storage in Azure

--- a/Acme.Demo.MicroServices.Drawer/appsettings.json
+++ b/Acme.Demo.MicroServices.Drawer/appsettings.json
@@ -8,6 +8,9 @@
   },
   "AllowedHosts": "*",
   "ServiceBusConnectionStrings" : {
-    "Drawer" : "SERVICEBUSQUEUECONNECTIONFORDRAWER"
+    "Drawer" : "SERVICEBUSQUEUECONNECTIONFORMENTOR"
+  },
+  "StorageConnectionStrings" : {
+    "Azure" : "SASURLTOTHECONTAINER"
   }
 }
