--- a/Acme.Demo.MicroService/Acme.Demo.MicroService.csproj
+++ b/Acme.Demo.MicroService/Acme.Demo.MicroService.csproj
@@ -5,6 +5,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Azure.Storage.Blobs" Version="12.9.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
       <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
     </ItemGroup>
 
