--- a/Acme.Demo.MicroServices.DrawerAdvanced/appsettings.json
+++ b/Acme.Demo.MicroServices.DrawerAdvanced/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ServiceBusConnectionStrings" : {
+    "Drawer" : "SERVICEBUSQUEUECONNECTIONFORMENTOR"
+  },
+  "StorageConnectionStrings" : {
+    "Azure" : "SASURLTOTHECONTAINER"
+  }
 }
