--- a/Acme.Demo.MicroServices.DrawerAdvanced/appsettings.json
+++ b/Acme.Demo.MicroServices.DrawerAdvanced/appsettings.json
@@ -8,7 +8,8 @@
   },
   "AllowedHosts": "*",
   "ServiceBusConnectionStrings" : {
-    "Drawer" : "SERVICEBUSQUEUECONNECTIONFORMENTOR"
+    "Mentor" : "SERVICEBUSQUEUECONNECTIONFORMENTOR",
+    "Drawer" : "SERVICEBUSQUEUECONNECTIONFORDRAWER"
   },
   "StorageConnectionStrings" : {
     "Azure" : "SASURLTOTHECONTAINER"
